# watermark

./: .gitignore  Lossless.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
data/: gemini_96_alpha_selfcal.npy  gemini_alpha_96_from_grey.npy  gemini_alpha_dual_96_from_grey.npy  gemini_alpha_dual_meta.json  gemini_alpha_meta.json  gemini_logo_rgb_96_from_grey.npy
docs/superpowers/plans/: 2026-06-03-local-quality-inpainting.md
scripts/: fetch_alpha.py
src/watermark/: __init__.py  config.py  consts.py  main.py
src/watermark/commands/: __init__.py  calibrate.py  detect.py  mask.py  remove.py
src/watermark/services/: __init__.py  alpha.py  detect.py  inpaint.py  mask.py  reassemble.py  verify.py
tests/: __init__.py  conftest.py  test_alpha_service.py  test_detect_cmd.py  test_detect_service.py  test_inpaint_service.py  test_mask_cmd.py  test_mask_service.py  test_placeholder.py  test_reassemble_service.py  test_remove_cmd.py  test_verify_alpha_roundtrip.py  test_verify_service.py
